Remove mention of LoginType
