# packages/hidp/hidp/api/constants.py
@@ -1,6 +1,0 @@
-from django.db import models
-
-
-class LoginType(models.TextChoices):
-    SESSION = "session", "Session"
-    BEARER = "bearer", "Bearer"
